--- a/Logistic_Regression/Logistic_Regression-iris_SGD_Binary.ipynb
+++ b/Logistic_Regression/Logistic_Regression-iris_SGD_Binary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,39 +10,41 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.datasets import load_iris\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score"
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_score\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Key Values: \n",
+      "Key Values:\n",
       " ['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename']\n",
-      "Feature names: \n",
+      "\n",
+      "Featue names: \n",
       " ['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
-      "Target names: \n",
-      " ['setosa' 'versicolor' 'virginica']\n"
+      "\n",
+      "Target names:\n",
+      " ['setosa', 'versicolor', 'virginica']\n"
      ]
     }
    ],
    "source": [
     "iris = load_iris()\n",
     "\n",
-    "print(\"Key Values: \\n\", list(iris.keys()))\n",
-    "print(\"Feature names: \\n\", list(iris.feature_names))\n",
-    "print(\"Target names: \\n\", iris.target_names)"
+    "print(\"Key Values:\\n\", list(iris.keys()))\n",
+    "print(\"\\nFeatue names: \\n\", list(iris.feature_names))\n",
+    "print(\"\\nTarget names:\\n\", list(iris.target_names))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -50,47 +52,30 @@
      "output_type": "stream",
      "text": [
       "(150, 2)\n",
-      "(150,)\n",
-      "\n",
-      "X data type:  float64\n",
-      "y data type:  int64\n"
+      "(150,)\n"
      ]
     }
    ],
    "source": [
     "X = iris[\"data\"][:,(2,3)]\n",
-    "\n",
-    "y = (iris[\"target\"] == 2).astype(np.int)\n",
+    "y = (iris[\"target\"]==2).astype(int)\n",
     "\n",
     "print(X.shape)\n",
-    "print(y.shape)\n",
-    "\n",
-    "print(\"\\nX data type: \", X.dtype)\n",
-    "print(\"y data type: \", y.dtype)"
+    "print(y.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X Train:  (120, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=2)\n",
-    "\n",
-    "print(\"X Train: \", X_train.shape)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
