--- a/Logistic_Regression/Logistic_Regression_GD_Optimization_Techniques.ipynb
+++ b/Logistic_Regression/Logistic_Regression_GD_Optimization_Techniques.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from sklearn.datasets import fetch_openml\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix, classification_report, recall_score, precision_score, f1_score"
    ]
   },
   {
@@ -140,6 +142,211 @@
    "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimization using Solver: Liblinear library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 12s, sys: 77.9 ms, total: 1min 12s\n",
+      "Wall time: 1min 12s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(solver='liblinear')"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "log_reg_ovr_liblinear = LogisticRegression(solver='liblinear', multi_class='auto', max_iter = 100)\n",
+    "log_reg_ovr_liblinear.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of Iterations:  [15]\n",
+      "\n",
+      "Test Accuracy:  0.9167857142857143\n",
+      "\n",
+      "Confusion Matrix:  [[1305    1    5    0    1    6   15    2    8    0]\n",
+      " [   0 1557    4    8    2   11    2    4   11    1]\n",
+      " [   7   20 1239   17   18    9   16   17   30    7]\n",
+      " [   9   10   36 1272    1   41    8   12   24   20]\n",
+      " [   4    2   11    6 1197    3    8    6   14   44]\n",
+      " [   7   14    7   50   14 1114   17    6   33   11]\n",
+      " [   4    4   15    1   11   22 1332    1    6    0]\n",
+      " [   9    5   22    2   13    5    0 1413    2   32]\n",
+      " [  12   39   14   39   10   40   13    9 1152   29]\n",
+      " [  10   10    6   22   46    8    0   51   13 1254]]\n",
+      "\n",
+      "Classification Report:                precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.95      0.97      0.96      1343\n",
+      "           1       0.94      0.97      0.95      1600\n",
+      "           2       0.91      0.90      0.90      1380\n",
+      "           3       0.90      0.89      0.89      1433\n",
+      "           4       0.91      0.92      0.92      1295\n",
+      "           5       0.88      0.88      0.88      1273\n",
+      "           6       0.94      0.95      0.95      1396\n",
+      "           7       0.93      0.94      0.93      1503\n",
+      "           8       0.89      0.85      0.87      1357\n",
+      "           9       0.90      0.88      0.89      1420\n",
+      "\n",
+      "    accuracy                           0.92     14000\n",
+      "   macro avg       0.92      0.92      0.92     14000\n",
+      "weighted avg       0.92      0.92      0.92     14000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"No. of Iterations: \", log_reg_ovr_liblinear.n_iter_)\n",
+    "y_test_predicted = log_reg_ovr_liblinear.predict(X_test)\n",
+    "\n",
+    "accuracy_score_test_liblinear = np.mean(y_test_predicted == y_test)\n",
+    "print(\"\\nTest Accuracy: \", accuracy_score_test_liblinear)\n",
+    "\n",
+    "print(\"\\nConfusion Matrix: \", confusion_matrix(y_test, y_test_predicted))\n",
+    "\n",
+    "print(\"\\nClassification Report: \", classification_report(y_test, y_test_predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimization using Solver: SAG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend ThreadingBackend with 8 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_iter reached after 188 seconds\n",
+      "CPU times: user 3min 8s, sys: 74.9 ms, total: 3min 8s\n",
+      "Wall time: 3min 8s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/iman/anaconda3/envs/mdanalysis/lib/python3.6/site-packages/sklearn/linear_model/_sag.py:330: ConvergenceWarning: The max_iter was reached which means the coef_ did not converge\n",
+      "  \"the coef_ did not converge\", ConvergenceWarning)\n",
+      "[Parallel(n_jobs=-1)]: Done   1 out of   1 | elapsed:  3.1min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(multi_class='multinomial', n_jobs=-1, solver='sag',\n",
+       "                   verbose=1)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "softmax_reg_sag = LogisticRegression(solver='sag', multi_class='multinomial', max_iter=100, verbose=1, n_jobs=-1)\n",
+    "softmax_reg_sag.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of Iterations:  [100]\n",
+      "\n",
+      "Test Accuracy:  0.9209285714285714\n",
+      "\n",
+      "Confusion Matrix:  [[1296    1    6    0    4   11   13    4    6    2]\n",
+      " [   0 1549    6   10    3   12    0    4   14    2]\n",
+      " [   5   20 1234   21   14    9   21   17   29   10]\n",
+      " [   5    9   30 1284    1   39    7   18   23   17]\n",
+      " [   6    3    6    4 1201    5   11    8    7   44]\n",
+      " [   4   11    8   43   12 1122   21    4   34   14]\n",
+      " [   5    4   19    1   14   17 1332    1    3    0]\n",
+      " [   6    4   25    3   10    6    0 1417    1   31]\n",
+      " [  10   25   13   45    6   42    9    9 1180   18]\n",
+      " [   7   11    6   13   37    6    0   45   17 1278]]\n",
+      "\n",
+      "Classification Report:                precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.97      0.96      1343\n",
+      "           1       0.95      0.97      0.96      1600\n",
+      "           2       0.91      0.89      0.90      1380\n",
+      "           3       0.90      0.90      0.90      1433\n",
+      "           4       0.92      0.93      0.92      1295\n",
+      "           5       0.88      0.88      0.88      1273\n",
+      "           6       0.94      0.95      0.95      1396\n",
+      "           7       0.93      0.94      0.94      1503\n",
+      "           8       0.90      0.87      0.88      1357\n",
+      "           9       0.90      0.90      0.90      1420\n",
+      "\n",
+      "    accuracy                           0.92     14000\n",
+      "   macro avg       0.92      0.92      0.92     14000\n",
+      "weighted avg       0.92      0.92      0.92     14000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"No. of Iterations: \", softmax_reg_sag.n_iter_)\n",
+    "y_test_predicted = softmax_reg_sag.predict(X_test)\n",
+    "\n",
+    "accuracy_score_test_sag= np.mean(y_test_predicted == y_test)\n",
+    "print(\"\\nTest Accuracy: \", accuracy_score_test_sag)\n",
+    "\n",
+    "print(\"\\nConfusion Matrix: \", confusion_matrix(y_test, y_test_predicted))\n",
+    "\n",
+    "print(\"\\nClassification Report: \", classification_report(y_test, y_test_predicted))"
    ]
   },
   {
