--- a/Logistic_Regression/Logistic_Regression_GD_Optimization_Techniques.ipynb
+++ b/Logistic_Regression/Logistic_Regression_GD_Optimization_Techniques.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,15 @@
     "\n",
     "from sklearn.datasets import fetch_openml\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.decomposition import PCA\n",
     "from sklearn.metrics import confusion_matrix, classification_report, recall_score, precision_score, f1_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.0, 1.0)"
+       "(0.0, 0.003921569)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,6 +349,198 @@
     "print(\"\\nConfusion Matrix: \", confusion_matrix(y_test, y_test_predicted))\n",
     "\n",
     "print(\"\\nClassification Report: \", classification_report(y_test, y_test_predicted))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Optimization Using Dimensionaly Reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_std, X_test_std, y_train_std, y_test_std = train_test_split(X_original, y, test_size=0.2, random_state=0)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train_std)\n",
+    "\n",
+    "X_train_std = scaler.transform(X_train_std)\n",
+    "X_test_std = scaler.transform(X_test_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 11.3 s, sys: 427 ms, total: 11.7 s\n",
+      "Wall time: 3.33 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PCA(n_components=0.95)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "pca = PCA(n_components=0.95)\n",
+    "\n",
+    "pca.fit(X_train_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Principle Components:  327\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of Principle Components: \", pca.n_components_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_std = pca.transform(X_train_std)\n",
+    "X_test_std = pca.transform(X_test_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 102 ms, sys: 184 ms, total: 286 ms\n",
+      "Wall time: 22.2 s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Done   1 out of   1 | elapsed:   22.1s finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(multi_class='multinomial', n_jobs=-1, verbose=1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "softmax_reg_pca = LogisticRegression(solver='lbfgs', multi_class='multinomial', max_iter=100, verbose=1, n_jobs=-1)\n",
+    "\n",
+    "softmax_reg_pca.fit(X_train_std, y_train_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No. of Iterations: [100]\n",
+      "\n",
+      "Test Accuracy:  0.9185714285714286\n",
+      "\n",
+      "Test Confusion Matrix:\n",
+      "[[1346    0    4    1    1   12   16    0    6    1]\n",
+      " [   0 1537   10    2    2    6    2    3   16    2]\n",
+      " [   7   23 1291   23   18    6   16   17   36    6]\n",
+      " [   2    8   51 1265    2   45    2   14   32   14]\n",
+      " [   2    4    9    1 1261    2   18   11    4   38]\n",
+      " [  10    6   16   39    7 1085   19    5   35    9]\n",
+      " [  14    7   14    1   13   16 1314    0    8    0]\n",
+      " [   3    7   22    6   16    5    0 1339    6   54]\n",
+      " [   4   36   11   27   10   39    9    3 1210   19]\n",
+      " [   5    3    6   16   48   11    1   47   12 1212]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.97      0.97      1387\n",
+      "           1       0.94      0.97      0.96      1580\n",
+      "           2       0.90      0.89      0.90      1443\n",
+      "           3       0.92      0.88      0.90      1435\n",
+      "           4       0.92      0.93      0.92      1350\n",
+      "           5       0.88      0.88      0.88      1231\n",
+      "           6       0.94      0.95      0.94      1387\n",
+      "           7       0.93      0.92      0.92      1458\n",
+      "           8       0.89      0.88      0.89      1368\n",
+      "           9       0.89      0.89      0.89      1361\n",
+      "\n",
+      "    accuracy                           0.92     14000\n",
+      "   macro avg       0.92      0.92      0.92     14000\n",
+      "weighted avg       0.92      0.92      0.92     14000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"No. of Iterations:\", softmax_reg_pca.n_iter_ )\n",
+    "\n",
+    "\n",
+    "y_test_predicted = softmax_reg_pca.predict(X_test_std)\n",
+    "#print(y_test_predict)\n",
+    "\n",
+    "accuracy_score_test_PCA_lbfgs = np.mean(y_test_predicted == y_test_std)\n",
+    "print(\"\\nTest Accuracy: \", accuracy_score_test_PCA_lbfgs)\n",
+    "\n",
+    "\n",
+    "print(\"\\nTest Confusion Matrix:\")\n",
+    "print(confusion_matrix(y_test_std, y_test_predicted))\n",
+    "\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test_std, y_test_predicted))"
    ]
   },
   {
