--- a/TF_Developer/C3.ipynb
+++ b/TF_Developer/C3.ipynb
@@ -978,24 +978,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21802784\n",
-      "0\n"
+      "Number of total parameters:  21802784\n",
+      "Number of trainable parameters:  0\n"
      ]
     }
    ],
    "source": [
     "total_params = pre_trained_model.count_params()\n",
     "num_trainable_params = sum([w.shape.num_elements() for w in pre_trained_model.trainable_weights])\n",
-    "print(total_params)\n",
-    "print(num_trainable_params)\n"
+    "print(\"Number of total parameters: \", total_params)\n",
+    "print(\"Number of trainable parameters: \", num_trainable_params)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class myCallbacks(tf.keras.callbacks.Callback):\n",
+    "    def on_epoch_end(self, epoch, logs = {}):\n",
+    "        if logs.get('accuracy') > 0.999:\n",
+    "            print(\"\\nReached 99.9% accuracy so stop training!\")\n",
+    "\n",
+    "            self.model.stop_training = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
