--- a/TF_Developer/C4.ipynb
+++ b/TF_Developer/C4.ipynb
@@ -199,6 +199,324 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training a binary classifier with the IMDB reviews dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-12 14:20:49.058133: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE4.1 SSE4.2 AVX AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow_datasets as tfds\n",
+    "\n",
+    "# Load the IMDVB Reviews dataset\n",
+    "imdb, info = tfds.load('imdb_reviews', with_info=True, as_supervised=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tfds.core.DatasetInfo(\n",
+      "    name='imdb_reviews',\n",
+      "    full_name='imdb_reviews/plain_text/1.0.0',\n",
+      "    description=\"\"\"\n",
+      "    Large Movie Review Dataset.\n",
+      "    This is a dataset for binary sentiment classification containing substantially more data than previous benchmark datasets. We provide a set of 25,000 highly polar movie reviews for training, and 25,000 for testing. There is additional unlabeled data for use as well.\n",
+      "    \"\"\",\n",
+      "    config_description=\"\"\"\n",
+      "    Plain text\n",
+      "    \"\"\",\n",
+      "    homepage='http://ai.stanford.edu/~amaas/data/sentiment/',\n",
+      "    data_path='/Users/iman/tensorflow_datasets/imdb_reviews/plain_text/1.0.0',\n",
+      "    download_size=80.23 MiB,\n",
+      "    dataset_size=129.83 MiB,\n",
+      "    features=FeaturesDict({\n",
+      "        'label': ClassLabel(shape=(), dtype=tf.int64, num_classes=2),\n",
+      "        'text': Text(shape=(), dtype=tf.string),\n",
+      "    }),\n",
+      "    supervised_keys=('text', 'label'),\n",
+      "    disable_shuffling=False,\n",
+      "    splits={\n",
+      "        'test': <SplitInfo num_examples=25000, num_shards=1>,\n",
+      "        'train': <SplitInfo num_examples=25000, num_shards=1>,\n",
+      "        'unsupervised': <SplitInfo num_examples=50000, num_shards=1>,\n",
+      "    },\n",
+      "    citation=\"\"\"@InProceedings{maas-EtAl:2011:ACL-HLT2011,\n",
+      "      author    = {Maas, Andrew L.  and  Daly, Raymond E.  and  Pham, Peter T.  and  Huang, Dan  and  Ng, Andrew Y.  and  Potts, Christopher},\n",
+      "      title     = {Learning Word Vectors for Sentiment Analysis},\n",
+      "      booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},\n",
+      "      month     = {June},\n",
+      "      year      = {2011},\n",
+      "      address   = {Portland, Oregon, USA},\n",
+      "      publisher = {Association for Computational Linguistics},\n",
+      "      pages     = {142--150},\n",
+      "      url       = {http://www.aclweb.org/anthology/P11-1015}\n",
+      "    }\"\"\",\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train': <PrefetchDataset shapes: ((), ()), types: (tf.string, tf.int64)>, 'test': <PrefetchDataset shapes: ((), ()), types: (tf.string, tf.int64)>, 'unsupervised': <PrefetchDataset shapes: ((), ()), types: (tf.string, tf.int64)>}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(imdb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(<tf.Tensor: shape=(), dtype=string, numpy=b\"This was an absolutely terrible movie. Don't be lured in by Christopher Walken or Michael Ironside. Both are great actors, but this must simply be their worst role in history. Even their great acting could not redeem this movie's ridiculous storyline. This movie is an early nineties US propaganda piece. The most pathetic scenes were those when the Columbian rebels were making their cases for revolutions. Maria Conchita Alonso appeared phony, and her pseudo-love affair with Walken was nothing but a pathetic emotional plug in a movie that was devoid of any real meaning. I am disappointed that there are movies like this, ruining actor's like Christopher Walken's good name. I could barely sit through it.\">, <tf.Tensor: shape=(), dtype=int64, numpy=0>)\n",
+      "(<tf.Tensor: shape=(), dtype=string, numpy=b'I have been known to fall asleep during films, but this is usually due to a combination of things including, really tired, being warm and comfortable on the sette and having just eaten a lot. However on this occasion I fell asleep because the film was rubbish. The plot development was constant. Constantly slow and boring. Things seemed to happen, but with no explanation of what was causing them or why. I admit, I may have missed part of the film, but i watched the majority of it and everything just seemed to happen of its own accord without any real concern for anything else. I cant recommend this film at all.'>, <tf.Tensor: shape=(), dtype=int64, numpy=0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-12 14:21:19.238747: W tensorflow/core/kernels/data/cache_dataset_ops.cc:757] The calling iterator did not fully read the dataset being cached. In order to avoid unexpected truncation of the dataset, the partially cached contents of the dataset will be discarded. This can happen if you have an input pipeline similar to `dataset.cache().take(k).repeat()`. You should use `dataset.take(k).cache().repeat()` instead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for example in imdb['train'].take(2):\n",
+    "    print(example)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the train and test sets\n",
+    "train_data, test_data = imdb['train'], imdb['test']\n",
+    "\n",
+    "# Create sentense and labels lists\n",
+    "training_sentences=[]\n",
+    "training_labels=[]\n",
+    "\n",
+    "testing_sentences=[]\n",
+    "testing_labels=[]\n",
+    "\n",
+    "# Loop over all training examples and save the sentences and labels\n",
+    "for s, l in train_data:\n",
+    "    training_sentences.append(s.numpy().decode('utf8'))\n",
+    "    training_labels.append(l.numpy())\n",
+    "\n",
+    "# Loop over all test examples and save the sentences and labels\n",
+    "for s, l in test_data:\n",
+    "    testing_sentences.append(s.numpy().decode('utf8'))\n",
+    "    testing_labels.append(l.numpy())\n",
+    "\n",
+    "# Convert labels lists to numpy array\n",
+    "training_labels_final = np.array(training_labels)\n",
+    "testing_labels_final = np.array(testing_labels)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Padded Sequences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "\n",
+    "vocab_size = 10000\n",
+    "max_length = 120\n",
+    "embeding_dim = 16\n",
+    "trunc_type = 'post'\n",
+    "oov_token = '<OOV>'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "# Initialize the Tokenizer class\n",
+    "tokenizer = Tokenizer(num_words=vocab_size, oov_token=oov_token)\n",
+    "\n",
+    "# Generate the word index dictionary for the training sentences\n",
+    "tokenizer.fit_on_texts(training_sentences)\n",
+    "word_index = tokenizer.word_index\n",
+    "\n",
+    "# Generate and pad the training sequences\n",
+    "sequences = tokenizer.texts_to_sequences(training_sentences)\n",
+    "padded  = pad_sequences(sequences, maxlen=max_length, truncating=trunc_type)\n",
+    "\n",
+    "testing_sequences = tokenizer.texts_to_sequences(testing_sentences)\n",
+    "testing_padded = pad_sequences(testing_sequences, maxlen=max_length)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build and Compile the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding_1 (Embedding)      (None, 120, 16)           160000    \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 1920)              0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 6)                 11526     \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1)                 7         \n",
+      "=================================================================\n",
+      "Total params: 171,533\n",
+      "Trainable params: 171,533\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Embedding(vocab_size, embeding_dim, input_length=max_length),\n",
+    "    tf.keras.layers.Flatten(),\n",
+    "    tf.keras.layers.Dense(6, activation='relu'),\n",
+    "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+    "])\n",
+    "\n",
+    "# Setup the training parameters\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "# Print the model summary\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "782/782 [==============================] - 3s 2ms/step - loss: 0.6059 - accuracy: 0.6351 - val_loss: 0.3888 - val_accuracy: 0.8235\n",
+      "Epoch 2/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.2506 - accuracy: 0.9048 - val_loss: 0.3770 - val_accuracy: 0.8374\n",
+      "Epoch 3/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.1020 - accuracy: 0.9753 - val_loss: 0.4622 - val_accuracy: 0.8255\n",
+      "Epoch 4/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.0247 - accuracy: 0.9976 - val_loss: 0.5382 - val_accuracy: 0.8223\n",
+      "Epoch 5/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.0095 - accuracy: 0.9990 - val_loss: 0.5788 - val_accuracy: 0.8276\n",
+      "Epoch 6/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.0032 - accuracy: 0.9998 - val_loss: 0.6405 - val_accuracy: 0.8272\n",
+      "Epoch 7/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 0.0010 - accuracy: 1.0000 - val_loss: 0.6922 - val_accuracy: 0.8272\n",
+      "Epoch 8/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 5.4179e-04 - accuracy: 1.0000 - val_loss: 0.7279 - val_accuracy: 0.8278\n",
+      "Epoch 9/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 3.0662e-04 - accuracy: 1.0000 - val_loss: 0.7667 - val_accuracy: 0.8281\n",
+      "Epoch 10/10\n",
+      "782/782 [==============================] - 2s 2ms/step - loss: 1.8595e-04 - accuracy: 1.0000 - val_loss: 0.8015 - val_accuracy: 0.8276\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x7fe6f3205050>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_epochs = 10\n",
+    "\n",
+    "# Tarin the model\n",
+    "model.fit(padded, training_labels_final, epochs=num_epochs, validation_data=(testing_padded, testing_labels_final))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
