Pytorch book practice: ch1: DataLoader

--- a/PyTorch/PyTorch_Computer_Vision_CookBook.ipynb
+++ b/PyTorch/PyTorch_Computer_Vision_CookBook.ipynb
@@ -506,11 +506,39 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "## Creating data loaders"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "torch.Size([8, 1, 28, 28])\n",
+            "torch.Size([8])\n"
+          ]
+        }
+      ],
+      "source": [
+        "from torch.utils.data import DataLoader\n",
+        "\n",
+        "# create a data loader from dataset\n",
+        "train_dl = DataLoader(train_ds, batch_size=8)\n",
+        "val_dl = DataLoader(val_ds, batch_size=8)\n",
+        "\n",
+        "# iterate over batches\n",
+        "for xb, yb, in train_dl:\n",
+        "    print(xb.shape)\n",
+        "    print(yb.shape)\n",
+        "    break"
+      ]
     },
     {
       "cell_type": "code",
