pytorch: Ch1; Building model

--- a/PyTorch/PyTorch_Computer_Vision_CookBook.ipynb
+++ b/PyTorch/PyTorch_Computer_Vision_CookBook.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 86,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -31,6 +31,9 @@
         "from torchvision import transforms\n",
         "from torch.utils.data import TensorDataset\n",
         "from torch.utils.data import DataLoader\n",
+        "\n",
+        "from torch import nn\n",
+        "\n",
         "\n",
         "print(\"Torch Version:\", torch.__version__)\n",
         "print(\"Torchvision Version: \", torchvision.__version__)"
@@ -540,11 +543,174 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "## Building models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 85,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "torch.Size([64, 100])\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Define linear model\n",
+        "from torch import nn\n",
+        "\n",
+        "# input tensor dimension 64*1000\n",
+        "input_tensor = torch.randn(64, 1000)\n",
+        "\n",
+        "# linear layer with 1000 inputs and 100 outputs\n",
+        "linear_layer = nn.Linear(1000,100)\n",
+        "\n",
+        "# output of linear layer\n",
+        "output = linear_layer(input_tensor)\n",
+        "print(output.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Define Sequential model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 87,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sequential(\n",
+            "  (0): Linear(in_features=4, out_features=5, bias=True)\n",
+            "  (1): ReLU()\n",
+            "  (2): Linear(in_features=5, out_features=1, bias=True)\n",
+            ")\n"
+          ]
+        }
+      ],
+      "source": [
+        "# define a two layer model\n",
+        "model = nn.Sequential(\n",
+        "    nn.Linear(4,5),\n",
+        "    nn.ReLU(),\n",
+        "    nn.Linear(5,1),\n",
+        ")\n",
+        "print(model)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Defining models using nn.Module"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 90,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Net(\n",
+            "  (conv1): Conv2d(1, 20, kernel_size=(5, 5), stride=(1, 1))\n",
+            "  (conv2): Conv2d(20, 50, kernel_size=(5, 5), stride=(1, 1))\n",
+            "  (fc1): Linear(in_features=800, out_features=500, bias=True)\n",
+            "  (fc2): Linear(in_features=500, out_features=10, bias=True)\n",
+            ")\n"
+          ]
+        }
+      ],
+      "source": [
+        "import torch.nn.functional as F\n",
+        "\n",
+        "class Net(nn.Module):\n",
+        "    def __init__(self):\n",
+        "        super(Net, self).__init__()\n",
+        "        self.conv1 = nn.Conv2d(1, 20, 5, 1)\n",
+        "        self.conv2 = nn.Conv2d(20, 50, 5, 1)\n",
+        "        self.fc1 = nn.Linear(4*4*50, 500)\n",
+        "        self.fc2 = nn.Linear(500,10)\n",
+        "    \n",
+        "    def forward(self, x):\n",
+        "        x = F.relu(self.conv1(x))\n",
+        "        x = F.max_pool2d(x, 2, 2)\n",
+        "        x = F.relu(self.conv2(x))\n",
+        "        x = F.max_pool2d(x, 2, 2)\n",
+        "        x = x.view(-1, 4*4*50)\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = self.fc2(x)\n",
+        "        return F.log_softmax(x, dim=1)\n",
+        "\n",
+        "model = Net()\n",
+        "print(model)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 95,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "cpu\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(next(model.parameters()).device)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 97,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "----------------------------------------------------------------\n",
+            "        Layer (type)               Output Shape         Param #\n",
+            "================================================================\n",
+            "            Conv2d-1           [-1, 20, 24, 24]             520\n",
+            "            Conv2d-2             [-1, 50, 8, 8]          25,050\n",
+            "            Linear-3                  [-1, 500]         400,500\n",
+            "            Linear-4                   [-1, 10]           5,010\n",
+            "================================================================\n",
+            "Total params: 431,080\n",
+            "Trainable params: 431,080\n",
+            "Non-trainable params: 0\n",
+            "----------------------------------------------------------------\n",
+            "Input size (MB): 0.00\n",
+            "Forward/backward pass size (MB): 0.12\n",
+            "Params size (MB): 1.64\n",
+            "Estimated Total Size (MB): 1.76\n",
+            "----------------------------------------------------------------\n"
+          ]
+        }
+      ],
+      "source": [
+        "from torchsummary import summary\n",
+        "summary(model, input_size=(1,28,28))"
+      ]
     },
     {
       "cell_type": "code",
